feat: active jobs offers page, route and API
